<resources>
    <string name="app_name">Study</string>

    <string name="action_settings">Settings</string>
    <string name="handler">Handler</string>
    <string name="cutom_view">自定义 View</string>
    <string name="event_dispatch">事件分发</string>
    <string name="other_lib">第三方库</string>

    <string name="lake_tahoe_image">Image of Lake Tahoe</string>
    <string name="lake_tahoe_title">Lake Tahoe</string>
    <string name="android_button">Android Button</string>
    <string name="centering_views">Centering Views</string>
    <string name="centered_button">Centered Button</string>
    <string name="basic_arrange">Basic Arrange</string>
    <string name="advanced_arrangement">Advanced Arrangement</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="basic_chains">Basic Chains</string>
    <string name="constraintset">ConstraintSet</string>
    <string name="advanced_chains">Advanced Chains</string>
    <string name="guidelines">Guidelines</string>
    <string name="button_1">Button 1</string>
    <string name="button_text">Button 1234</string>
    <string name="button_text_12">Button 12</string>
    <string name="arrange">Arrange</string>
    <string name="button">Button</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="advanced_arrange">Advanced Arrange</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="zero_point_zero">0.0</string>
    <string name="dot">.</string>
    <string name="centering">Basic Centering</string>
    <string name="big_android_icon">Big Android Icon</string>
    <string name="textview">TextView</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="subtract">−</string>
    <string name="constraintdemo">ConstraintDemo</string>
    <string name="command_adb">command adb</string>
    <string name="anr">anr</string>
    <string name="lifestyle">lifestyle </string>

</resources>
