<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="@style/main_item_txt_style"
            android:text="@string/handler" />

        <Button
            style="@style/main_item_txt_style"
            android:text="@string/cutom_view" />

        <Button
            android:id="@+id/btn_dispatch_event"
            style="@style/main_item_txt_style"
            android:text="@string/event_dispatch" />

        <Button
            android:id="@+id/btn_other_lib"
            style="@style/main_item_txt_style"
            android:text="@string/other_lib" />

        <Button
            android:id="@+id/constraint_demo_activity"
            style="@style/main_item_txt_style"
            android:text="@string/constraintdemo" />

        <Button
            android:id="@+id/btn_adb"
            style="@style/main_item_txt_style"
            android:text="@string/command_adb" />

        <Button
            android:id="@+id/btn_anr"
            style="@style/main_item_txt_style"
            android:text="@string/anr" />
        <Button
            android:id="@+id/btn_activity_life"
            style="@style/main_item_txt_style"
            android:text="@string/lifestyle" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>